--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -14,7 +14,7 @@
     <div style="position:absolute; left: 40%;top: 30%">
         <div id="div1">
             <input class="input-group-lg" type="text" id="movieName" placeholder="Movie Name" name="keyword" />
-            <input type="hidden" id="Id" name="Id" />
+            <input type="text" id="Id" name="Id" />
         </div>
     </div>
 }
