--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,11 +1,8 @@
 ﻿@page
-@model IndexModel
+@model user_moive_search.Pages.IndexModel
 @{
     ViewData["Title"] = "Home page";
 }
-
-
-
 
 
 
@@ -17,10 +14,13 @@
 
     <div class="input-group col-lg-12 mt-lg-1">
         <input type="search" id="movieName" class="form-control rounded" placeholder="Movie Name" aria-label="Search" aria-describedby="search-addon" />
-        <button type="button" class="btn btn-outline-primary">search</button>
+        <form method="post">
+            <input asp-for="Model.movieId" type="hidden" id="id"  />
+            <button type="submit" class="btn btn-outline-primary">search</button>
+        </form>
     </div>
 
-    <input type="hidden" id="id" name="Id" />
-
+    
 
 }
+
