--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -12,17 +12,39 @@
 {
 
 
+    <form method="post">
 
+        <div class="input-group col-lg-12 mt-lg-1">
+            <input type="search" id="movieName" class="form-control rounded" placeholder="Movie Name" aria-label="Search" aria-describedby="search-addon" />
 
-    <div class="input-group col-lg-12 mt-lg-1">
-        <input type="search" id="movieName" class="form-control rounded" placeholder="Movie Name" aria-label="Search" aria-describedby="search-addon" />
-        <form method="post">
             <input asp-for="Model.movieId" type="hidden" id="id" />
-            <button type="submit" asp-page-handler="UserSearched" class="btn btn-outline-primary">search</button>
-        </form>
+
+
+
+
+            <button type="button" asp-page-handler="UserSearched" class="btn btn-outline-primary" onclick="show()">search</button>
+    
     </div>
 
+    <div style="margin-top: 15%; display: none;" id="cardShow" >
+        <div class="card">
+            <div class="card-header" id="cardTitle"></div>
+            <div class="card-body">
+                <h5 class="card-title" id="cardText"></h5>
+             
+                    <button type="submit" asp-page-handler="UserViewed"
+                            class="btn btn-primary"
+                            style="display: flex; justify-content: center; align-items: center;"
+                            onclick="haid()">
+                        watch
+                    </button>
 
+            </div>
+        </div>
+
+
+    </div>
+    </form>
 
 }
 
